--- a/helm-deploy/chdb-ex/templates/minio-deployment.yaml
+++ b/helm-deploy/chdb-ex/templates/minio-deployment.yaml
@@ -14,7 +14,61 @@ spec:
       labels:
         app: {{ .Values.namePrefix }}-minio
     spec:
-      nodeName: {{ .Values.minio.assignToNode }}
+      affinity:
+        nodeAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - weight: 1
+              preference:
+                matchExpressions:
+                  - key: kubernetes.io/hostname
+                    operator: In
+                    values:
+                      - {{ .Values.preferredStorageHostname }}
+      containers:
+        - name: minio
+          image: minio/minio:latest
+          command:
+            - /bin/bash
+            - -c
+          args: 
+            - minio server /data --console-address :9090
+          ports:
+            - containerPort: 9090
+          resources:
+{{ toYaml .Values.minio.resources | indent 12 }}
+          volumeMounts:
+            - mountPath: /data
+              name: minio-data
+      volumes:
+        - name: minio-data
+          persistentVolumeClaim:
+            claimName: {{ .Values.namePrefix }}-minio 
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ .Values.namePrefix }}-minio-api
+spec:
+  type: ClusterIP
+  ports:
+    - port: 9000
+      targetPort: 9000
+  selector:
+    app: {{ .Values.namePrefix }}-minio
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ .Values.namePrefix }}-minio-ui
+spec:
+  type: NodePort
+  selector:
+    app: {{ .Values.namePrefix }}-minio
+  ports:
+    - protocol: TCP
+      port: 9090
+      targetPort: 9090
+      nodePort: 30005
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
