--- a/helm-deploy/chdb-ex/values.yaml
+++ b/helm-deploy/chdb-ex/values.yaml
@@ -1,5 +1,6 @@
 namePrefix: "chdb"
 preferredStorageHostname: pi0
+preferredWorkerHostname: pi1
 keyStore:
   resources:
     requests:
@@ -21,5 +22,14 @@ minio:
       memory: "1Gi"
       cpu: "1000m"
       ephemeral-storage: "1Gi"
-
+chdbWorker:
+  resources:
+    requests:
+      memory: "2Gi"
+      cpu: "1000m"
+      ephemeral-storage: "2Gi"
+    limits:
+      memory: "2Gi"
+      cpu: "1024m"
+      ephemeral-storage: "2Gi"
 
