separating the producer from the worker

--- a/helm-deploy/chdb-ex/templates/key-store-deployment.yaml
+++ b/helm-deploy/chdb-ex/templates/key-store-deployment.yaml
@@ -23,7 +23,7 @@ spec:
                   - key: kubernetes.io/hostname
                     operator: In
                     values:
-                      - {{ .Values.preferredStorageHostname }}
+                      - {{ .Values.keyStore.preferredHostname }}
       containers:
         - name: keydb
           image: eqalpha/keydb:latest
