--- a/helm-deploy/chdb-ex/templates/producer-deployment.yaml
+++ b/helm-deploy/chdb-ex/templates/producer-deployment.yaml
@@ -1,18 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Values.namePrefix }}-worker
+  name: {{ .Values.namePrefix }}-producer
   labels:
-    app: {{ .Values.namePrefix }}-worker
+    app: {{ .Values.namePrefix }}-producer
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
-      app: {{ .Values.namePrefix }}-worker
+      app: {{ .Values.namePrefix }}-producer
   template:
     metadata:
       labels:
-        app: {{ .Values.namePrefix }}-worker
+        app: {{ .Values.namePrefix }}-producer
     spec:
       affinity:
         nodeAffinity:
@@ -23,12 +23,12 @@ spec:
                   - key: kubernetes.io/hostname
                     operator: In
                     values:
-                      - {{ .Values.chdbWorker.preferredHostname }}
+                      - {{ .Values.chdbProducer.preferredHostname }}
       containers:
-        - name: chdb-ex-worker
-          image: pi0:30000/chdb-ex-worker
+        - name: chdb-ex-producer
+          image: pi0:30000/chdb-ex-producer
           resources:
-{{ toYaml $.Values.chdbWorker.resources | indent 12 }}
+{{ toYaml $.Values.chdbProducer.resources | indent 12 }}
           volumeMounts:
             - mountPath: /tmp
               name: tmp-data
