--- a/Dockerfile.worker
+++ b/Dockerfile.worker
@@ -1,7 +1,7 @@
 FROM alpine:latest
 
-COPY ./bin/producer ./producer
-RUN chmod +x ./producer
+COPY ./bin/worker ./worker
+RUN chmod +x ./worker
 
-CMD [ "./producer" ]
+CMD [ "./worker" ]
 
