--- a/helm-deploy/chdb-ex/templates/key-store-deployment.yaml
+++ b/helm-deploy/chdb-ex/templates/key-store-deployment.yaml
@@ -46,9 +46,10 @@ kind: Service
 metadata:
   name: {{ .Values.namePrefix }}-keydb
 spec:
-  type: ClusterIP
+  type: NodePort
   ports:
     - port: 6379
       targetPort: 6379
+      nodePort: 30010
   selector:
     app: {{ .Values.namePrefix }}-keydb
