--- a/helm-deploy/chdb-ex/templates/worker-deployment.yaml
+++ b/helm-deploy/chdb-ex/templates/worker-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: {{ .Values.namePrefix }}-worker
 spec:
-  replicas: 2
+  replicas: {{ .Values.chdbWorker.replicas | default 1 }}
   selector:
     matchLabels:
       app: {{ .Values.namePrefix }}-worker
